[package]
name = "rust-application"
name = "static-site-gen"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust application"

[dependencies]
# Add your dependencies here

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.9"
tera = "1.19"
walkdir = "2.3"
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"] }
deno_core = "0.188"
deno_runtime = "0.188"
async-trait = "0.1"
glob = "0.3"
fs_extra = "1.3"
[dev-dependencies]
# Add your development dependencies here

[build-dependencies]
# Add your build dependencies here

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
