[package]
name = "static-site-gen"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust application"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.9"
tera = "1.19"
walkdir = "2.3"
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
glob = "0.3"
fs_extra = "1.3"
deno_core = "0.343.0"
deno_runtime = "0.207.0"
log = "0.4.27"

[dev-dependencies]
[build-dependencies]
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
